main-application/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-application
  template:
    metadata:
      labels:
        app: main-application
    spec:
      containers:
        - name: main-application
          image: davidjoliver86/main-app
