main-application/manifests/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-application-svc
spec:
  type: ClusterIP
  selector:
    app: main-application
  ports:
    - port: 2222 # arbitrary cluster port
      protocol: TCP
      targetPort: 5000 # exposed port that flask runs on
