main-application/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-application-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: main-application-svc
              servicePort: 2222 # matches arbitrary cluster port in clusterip.yaml
